--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -2,7 +2,7 @@ name: frontend
 description: "A new Flutter project."
 # The following line prevents the package from being accidentally published to
 # pub.dev using `flutter pub publish`. This is preferred for private packages.
-publish_to: 'none' # Remove this line if you wish to publish to pub.dev
+publish_to: "none" # Remove this line if you wish to publish to pub.dev
 
 # The following defines the version and build number for your application.
 # A version number is three numbers separated by dots, like 1.2.43
@@ -19,7 +19,7 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 version: 1.0.0+1
 
 environment:
-  sdk: '>=3.4.1 <4.0.0'
+  sdk: ">=3.4.1 <4.0.0"
 
 # Dependencies specify other packages that your package needs in order to work.
 # To automatically upgrade your package dependencies to the latest versions
@@ -31,10 +31,59 @@ dependencies:
   flutter:
     sdk: flutter
 
-
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.6
+  async: ^2.11.0
+  camera_android_camerax: ^0.6.8+2
+  characters: ^1.3.0
+  collection: ^1.18.0
+  crypto: ^3.0.5
+  fake_async: ^1.3.1
+  file_selector_linux: ^0.9.3
+  file_selector_macos: ^0.9.4+2
+  file_selector_platform_interface: ^2.6.2
+  file_selector_windows: ^0.9.3+3
+  flutter_lints: ^3.0.2
+  flutter_plugin_android_lifecycle: ^2.0.22
+  google_fonts: ^5.1.0
+  http_parser: ^4.0.2
+  image: ^4.2.0
+  image_picker: ^1.1.2
+  image_picker_android: ^0.8.12+12
+  image_picker_for_web: ^3.0.6
+  image_picker_ios: ^0.8.12+1
+  image_picker_linux: ^0.2.1+1
+  image_picker_macos: ^0.2.1+1
+  image_picker_platform_interface: ^2.10.0
+  image_picker_windows: ^0.2.1+1
+  leak_tracker: ^10.0.4
+  leak_tracker_flutter_testing: ^3.0.3
+  lints: ^3.0.0
+  matcher: ^0.12.16+1
+  material_color_utilities: ^0.8.0
+  meta: ^1.12.0
+  mime: ^2.0.0
+  path: ^1.9.0
+  path_provider_android: ^2.2.10
+  permission_handler: ^10.4.5
+  permission_handler_android: ^10.3.6
+  permission_handler_apple: ^9.1.4
+  permission_handler_platform_interface: ^3.12.0
+  permission_handler_windows: ^0.1.3
+  platform: ^3.1.5
+  stack_trace: ^1.11.1
+  string_scanner: ^1.2.0
+  test_api: ^0.7.0
+  typed_data: ^1.3.2
+  vm_service: ^14.2.1
+  xdg_directories: ^1.0.4
+  camera:
+  flutter_svg:
+  flutter_launcher_icons:
+  better_open_file:
+  flutter_dotenv:
+  shimmer:
 
 dev_dependencies:
   flutter_test:
@@ -52,15 +101,20 @@ dev_dependencies:
 
 # The following section is specific to Flutter packages.
 flutter:
-
   # The following line ensures that the Material Icons font is
   # included with your application, so that you can use the icons in
   # the material Icons class.
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
-  #   - images/a_dot_burr.jpeg
+  assets:
+    - assets/allergic/
+    - assets/bottomNavigation/
+    - assets/form/
+    - assets/home/
+    - assets/skintypequiz/
+    - assets/illustration skintype.svg
+
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
@@ -75,6 +129,10 @@ flutter:
   # list giving the asset and other descriptors for the font. For
   # example:
   # fonts:
+  #   fonts:
+  #     - family: Anuphan
+  #       fonts:
+  #         - asset: assets/fonts/Anuphan-VariableFont_wght.ttf
   #   - family: Schyler
   #     fonts:
   #       - asset: fonts/Schyler-Regular.ttf
